--- a/about.html
+++ b/about.html
@@ -59,33 +59,14 @@
             </ul>
         </nav>
 
-        <section id="intro">
-            <p class="name">Hi, my name is <span>Leosha Trushin.</span></p>
-
-            <h2 class="heading">I am studying software development.</h2>
-
-            <p>
-                I'm a third year bachelor's student thinking of specializing in
-                fullstack web development.
-            </p>
-
-            <p>
-                Currently, I'm transitioning from mathematics and theoretical
-                computer science to software development by working through
-                <a href="https://frontendmasters.com/">Frontend Masters</a>
-                courses.
-            </p>
-        </section>
-
         <div class="gradient"></div>
 
         <section id="projects">
             <div id="projects-container">
-                <h2>Projects I'm proud of</h2>
+                <h2>About Leosha Trushin</h2>
                 <article>
                     <div class="project-text">
-                        <h4>Latest Project</h4>
-                        <h3>Wall of Wonder</h3>
+                        <h3>Just the highlights</h3>
                         <p class="project-description">
                             Description of the project. This should be fairly
                             concise while also describing the key components
@@ -97,86 +78,18 @@
                             <a href="">like this</a> and
                             <a href="">like this</a>.
                         </p>
-                        <h4>Technologies used include:</h4>
+                        <h4>My favorite technologies include:</h4>
                         <ul>
                             <li>HTML</li>
                             <li>CSS</li>
-                            <li>SVG</li>
+                            <li>UX</li>
                         </ul>
                     </div>
                     <img
-                        src="img/fem-gettingstartedcss-ch5-1.webp"
-                        alt="Wall of Wonder"
+                        src="img/pexels-christina-morillo-1181267.jpg"
+                        alt="Just the highlights"
                     />
                 </article>
-                <article>
-                    <div class="project-text">
-                        <h4>Bootcamp Project</h4>
-                        <h3>Feed-A-Star-Mole Game</h3>
-                        <p class="project-description">
-                            Description of the project. This should be fairly
-                            concise while also describing the key components
-                            that you developed or worked on. It can be as long
-                            as you need it to be but should at least be a few
-                            sentences long. Be sure to include specific links
-                            anywhere in the description. A link looks like
-                            <a href="">this</a>, and multiple links look
-                            <a href="">like this</a> and
-                            <a href="">like this</a>.
-                        </p>
-                        <h4>Technologies used include:</h4>
-                        <ul>
-                            <li>HTML</li>
-                            <li>CSS</li>
-                            <li>JavaScript</li>
-                        </ul>
-                    </div>
-                    <img
-                        src="img/fem-gettingstartedcss-ch5-5.webp"
-                        alt="Feed-A-Star-Mole Game"
-                    />
-                </article>
-                <article>
-                    <div class="project-text">
-                        <h4>Photography Project</h4>
-                        <h3>Wall of Wonder Collection</h3>
-                        <p class="project-description">
-                            Description of the project. This should be fairly
-                            concise while also describing the key components
-                            that you developed or worked on. It can be as long
-                            as you need it to be but should at least be a few
-                            sentences long. Be sure to include specific links
-                            anywhere in the description. A link looks like
-                            <a href="">this</a>, and multiple links look
-                            <a href="">like this</a> and
-                            <a href="">like this</a>.
-                        </p>
-                        <h4>Technologies used include:</h4>
-                        <ul>
-                            <li>HTML</li>
-                            <li>CSS Grid</li>
-                        </ul>
-                    </div>
-                    <img
-                        src="img/fem-gettingstartedcss-ch5-4.webp"
-                        alt="Wall of Wonder Collection"
-                    />
-                </article>
-            </div>
-        </section>
-
-        <div class="gradient"></div>
-
-        <section id="contact">
-            <div class="contact-container">
-                <h2 class="contact-header">Contact me</h2>
-                <p>
-                    I'm always open to new opportunities and connections. Feel
-                    free to contact me via email or LinkedIn.
-                </p>
-                <a class="link-button" href="mailto:leoshatrushin@gmail.com"
-                    >Email me</a
-                >
             </div>
         </section>
 
